--- a/css/style.css
+++ b/css/style.css
@@ -160,9 +160,8 @@ p {
 .navbar-links a {
   display: block;
   padding: 20px;
-  font-size: 2rem;
+  font-size: clamp(1rem, 2vw, 3rem);
   color: #fff;
-
   transition: transform 0.15s;
 }
 
@@ -223,8 +222,8 @@ p {
 }
 
 .hero-title {
-  font-size: clamp(3rem, 10vw, 5rem);
-  line-height: 5rem;
+  font-size: clamp(2rem, 5vw, 6rem);
+  line-height: clamp(3rem, 6vw, 6.5rem);
   animation: fade-in 1.5s 0.5s ease-out forwards;
   opacity: 0;
 }
@@ -245,10 +244,10 @@ p {
   100% { transform: rotate(0deg); }
 }
 
-
 .hero-subtitle {
-  margin: 20px 0;
-  font-size: clamp(2rem, 4vw, 4.5rem);
+  font-size: clamp(2.5rem, 6vw, 7rem);
+  line-height: clamp(3.2rem, 6.5vw, 7.5rem);
+  margin: 1rem 0;
   animation: fade-in 1.5s 1s ease-out forwards;
   opacity: 0;
 }
@@ -480,7 +479,7 @@ p {
 }
 
 .projects-showcase .phone-figure {
-  width: 20%;
+  width: 15%;
   padding-block: 2rem;
 }
 
@@ -620,7 +619,6 @@ p {
   color: #fff;
   font-size: clamp(1.6rem, 0.5vw, 2rem);
 }
-
 
 /* Footer */
 
